parser.out
Created by PLY version 3.11 (http://www.dabeaz.com/ply)

Grammar

Rule 0     S' -> begin
Rule 1     begin -> BEGIN OPAREN ID CPAREN classDef fxDef main end
Rule 2     pointMain -> <empty>
Rule 3     main -> MAIN pointMain OPAREN CPAREN OBRACKET body CBRACKET
Rule 4     fxDef -> VOID FX pointFx ID pointFxId OPAREN param CPAREN OBRACKET body CBRACKET fxDef
Rule 5     fxDef -> fxType FX pointFx ID pointFxId OPAREN param CPAREN OBRACKET body RETURN ID EOF CBRACKET fxDef
Rule 6     fxDef -> epsilon
Rule 7     fxType -> INT
Rule 8     fxType -> STRING
Rule 9     fxType -> DEC
Rule 10    fxType -> BOOL
Rule 11    pointFx -> <empty>
Rule 12    pointFxId -> <empty>
Rule 13    param -> paramType ID pointParam
Rule 14    param -> paramType ID pointParam COMMA param
Rule 15    param -> epsilon
Rule 16    paramType -> INT
Rule 17    paramType -> STRING
Rule 18    paramType -> DEC
Rule 19    paramType -> BOOL
Rule 20    pointParam -> <empty>
Rule 21    paramCall -> ID
Rule 22    paramCall -> ID COMMA paramCall
Rule 23    paramCall -> epsilon
Rule 24    voidCall -> ID OPAREN paramCall CPAREN EOF
Rule 25    body -> varsDef body
Rule 26    body -> statements body
Rule 27    body -> epsilon
Rule 28    statements -> assignmentDef
Rule 29    statements -> input
Rule 30    statements -> output
Rule 31    statements -> voidCall
Rule 32    statements -> whileCycle
Rule 33    statements -> ifCond
Rule 34    statements -> classCall
Rule 35    varsDef -> VAR objType var EOF
Rule 36    varsDef -> VAR varSimpleType var EOF
Rule 37    varSimpleType -> INT
Rule 38    varSimpleType -> STRING
Rule 39    varSimpleType -> DEC
Rule 40    varSimpleType -> BOOL
Rule 41    var -> varsType
Rule 42    var -> varsType COMMA var
Rule 43    varsType -> ID
Rule 44    varsType -> arrDef
Rule 45    varsType -> matrixDef
Rule 46    arrDef -> ID OSQUAREBR varCte CSQUAREBR
Rule 47    matrixDef -> arrDef OSQUAREBR varCte CSQUAREBR
Rule 48    assignmentDef -> ID ASSIGNMENT pointPushAssignment expAssignment
Rule 49    pointPushAssignment -> <empty>
Rule 50    expAssignment -> expRelational EOF
Rule 51    expAssignment -> returnCall EOF
Rule 52    expAssignment -> classCall
Rule 53    returnCall -> ID OPAREN paramCall CPAREN
Rule 54    expRelational -> plusMinus
Rule 55    expRelational -> plusMinus opRelational expRelational pointCheckOpRel
Rule 56    pointCheckOpRel -> <empty>
Rule 57    opRelational -> EQUAL
Rule 58    opRelational -> DIFFERENT
Rule 59    opRelational -> GREATERTHAN
Rule 60    opRelational -> GREATERTHANEQ
Rule 61    opRelational -> LESSTHAN
Rule 62    opRelational -> LESSTHANEQ
Rule 63    plusMinus -> multDiv pointCheckPlusMinus
Rule 64    plusMinus -> multDiv pointCheckPlusMinus PLUS pointPushPlusMinus plusMinus
Rule 65    plusMinus -> multDiv pointCheckPlusMinus MINUS pointPushPlusMinus plusMinus
Rule 66    pointCheckPlusMinus -> <empty>
Rule 67    pointPushPlusMinus -> <empty>
Rule 68    multDiv -> expParen pointCheckMultDiv
Rule 69    multDiv -> expParen pointCheckMultDiv MULTIPLY pointPushMultDiv multDiv
Rule 70    multDiv -> expParen pointCheckMultDiv DIVIDE pointPushMultDiv multDiv
Rule 71    pointCheckMultDiv -> <empty>
Rule 72    pointPushMultDiv -> <empty>
Rule 73    expParen -> OPAREN pointFakeBackground expRelational CPAREN pointRemoveFakeBackground
Rule 74    expParen -> varCte
Rule 75    pointFakeBackground -> <empty>
Rule 76    pointRemoveFakeBackground -> <empty>
Rule 77    classDef -> CLASS pointClass ID pointClassName OBRACKET ATTRIBUTES COLON pointAtt METHODS COLON pointScopeClass fxDef pointScopeClass2 CBRACKET classDef
Rule 78    classDef -> epsilon
Rule 79    pointAtt -> varsDef
Rule 80    pointAtt -> varsDef pointAtt
Rule 81    pointScopeClass -> <empty>
Rule 82    pointScopeClass2 -> <empty>
Rule 83    pointClassName -> <empty>
Rule 84    pointClass -> <empty>
Rule 85    classCall -> ID MONEY ID OPAREN paramCall CPAREN EOF
Rule 86    objType -> ID
Rule 87    varCte -> INT pointINT
Rule 88    varCte -> DEC pointDEC
Rule 89    varCte -> STRING pointSTRING
Rule 90    varCte -> ID
Rule 91    pointINT -> <empty>
Rule 92    pointDEC -> <empty>
Rule 93    pointSTRING -> <empty>
Rule 94    whileCycle -> WHILE OPAREN expRelational CPAREN OBRACKET body CBRACKET
Rule 95    ifCond -> IF OPAREN expRelational CPAREN pointIfCond1 OBRACKET body CBRACKET pointIfCond2
Rule 96    ifCond -> IF OPAREN expRelational CPAREN pointIfCond1 OBRACKET body CBRACKET ELSE pointIfCond3 OBRACKET body CBRACKET pointIfCond2
Rule 97    pointIfCond1 -> <empty>
Rule 98    pointIfCond2 -> <empty>
Rule 99    pointIfCond3 -> <empty>
Rule 100   input -> INPUT OPAREN ID CPAREN EOF
Rule 101   output -> OUTPUT OPAREN expRelational CPAREN EOF
Rule 102   end -> END OPAREN ID CPAREN
Rule 103   epsilon -> <empty>

Terminals, with rules where they appear

ASSIGNMENT           : 48
ATTRIBUTES           : 77
BEGIN                : 1
BOOL                 : 10 19 40
CBRACKET             : 3 4 5 77 94 95 96 96
CLASS                : 77
COLON                : 77 77
COMMA                : 14 22 42
CPAREN               : 1 3 4 5 24 53 73 85 94 95 96 100 101 102
CSQUAREBR            : 46 47
DEC                  : 9 18 39 88
DIFFERENT            : 58
DIVIDE               : 70
ELSE                 : 96
END                  : 102
EOF                  : 5 24 35 36 50 51 85 100 101
EQUAL                : 57
FX                   : 4 5
GREATERTHAN          : 59
GREATERTHANEQ        : 60
ID                   : 1 4 5 5 13 14 21 22 24 43 46 48 53 77 85 85 86 90 100 102
IF                   : 95 96
INPUT                : 100
INT                  : 7 16 37 87
LESSTHAN             : 61
LESSTHANEQ           : 62
MAIN                 : 3
METHODS              : 77
MINUS                : 65
MONEY                : 85
MULTIPLY             : 69
OBRACKET             : 3 4 5 77 94 95 96 96
OPAREN               : 1 3 4 5 24 53 73 85 94 95 96 100 101 102
OSQUAREBR            : 46 47
OUTPUT               : 101
PLUS                 : 64
RETURN               : 5
STRING               : 8 17 38 89
VAR                  : 35 36
VOID                 : 4
WHILE                : 94
error                : 

Nonterminals, with rules where they appear

arrDef               : 44 47
assignmentDef        : 28
begin                : 0
body                 : 3 4 5 25 26 94 95 96 96
classCall            : 34 52
classDef             : 1 77
end                  : 1
epsilon              : 6 15 23 27 78
expAssignment        : 48
expParen             : 68 69 70
expRelational        : 50 55 73 94 95 96 101
fxDef                : 1 4 5 77
fxType               : 5
ifCond               : 33
input                : 29
main                 : 1
matrixDef            : 45
multDiv              : 63 64 65 69 70
objType              : 35
opRelational         : 55
output               : 30
param                : 4 5 14
paramCall            : 22 24 53 85
paramType            : 13 14
plusMinus            : 54 55 64 65
pointAtt             : 77 80
pointCheckMultDiv    : 68 69 70
pointCheckOpRel      : 55
pointCheckPlusMinus  : 63 64 65
pointClass           : 77
pointClassName       : 77
pointDEC             : 88
pointFakeBackground  : 73
pointFx              : 4 5
pointFxId            : 4 5
pointINT             : 87
pointIfCond1         : 95 96
pointIfCond2         : 95 96
pointIfCond3         : 96
pointMain            : 3
pointParam           : 13 14
pointPushAssignment  : 48
pointPushMultDiv     : 69 70
pointPushPlusMinus   : 64 65
pointRemoveFakeBackground : 73
pointSTRING          : 89
pointScopeClass      : 77
pointScopeClass2     : 77
returnCall           : 51
statements           : 26
var                  : 35 36 42
varCte               : 46 47 74
varSimpleType        : 36
varsDef              : 25 79 80
varsType             : 41 42
voidCall             : 31
whileCycle           : 32

Parsing method: LALR

state 0

    (0) S' -> . begin
    (1) begin -> . BEGIN OPAREN ID CPAREN classDef fxDef main end

    BEGIN           shift and go to state 2

    begin                          shift and go to state 1

state 1

    (0) S' -> begin .



state 2

    (1) begin -> BEGIN . OPAREN ID CPAREN classDef fxDef main end

    OPAREN          shift and go to state 3


state 3

    (1) begin -> BEGIN OPAREN . ID CPAREN classDef fxDef main end

    ID              shift and go to state 4


state 4

    (1) begin -> BEGIN OPAREN ID . CPAREN classDef fxDef main end

    CPAREN          shift and go to state 5


state 5

    (1) begin -> BEGIN OPAREN ID CPAREN . classDef fxDef main end
    (77) classDef -> . CLASS pointClass ID pointClassName OBRACKET ATTRIBUTES COLON pointAtt METHODS COLON pointScopeClass fxDef pointScopeClass2 CBRACKET classDef
    (78) classDef -> . epsilon
    (103) epsilon -> .

    CLASS           shift and go to state 7
    VOID            reduce using rule 103 (epsilon -> .)
    INT             reduce using rule 103 (epsilon -> .)
    STRING          reduce using rule 103 (epsilon -> .)
    DEC             reduce using rule 103 (epsilon -> .)
    BOOL            reduce using rule 103 (epsilon -> .)
    MAIN            reduce using rule 103 (epsilon -> .)

    classDef                       shift and go to state 6
    epsilon                        shift and go to state 8

state 6

    (1) begin -> BEGIN OPAREN ID CPAREN classDef . fxDef main end
    (4) fxDef -> . VOID FX pointFx ID pointFxId OPAREN param CPAREN OBRACKET body CBRACKET fxDef
    (5) fxDef -> . fxType FX pointFx ID pointFxId OPAREN param CPAREN OBRACKET body RETURN ID EOF CBRACKET fxDef
    (6) fxDef -> . epsilon
    (7) fxType -> . INT
    (8) fxType -> . STRING
    (9) fxType -> . DEC
    (10) fxType -> . BOOL
    (103) epsilon -> .

    VOID            shift and go to state 10
    INT             shift and go to state 13
    STRING          shift and go to state 14
    DEC             shift and go to state 15
    BOOL            shift and go to state 16
    MAIN            reduce using rule 103 (epsilon -> .)

    fxDef                          shift and go to state 9
    fxType                         shift and go to state 11
    epsilon                        shift and go to state 12

state 7

    (77) classDef -> CLASS . pointClass ID pointClassName OBRACKET ATTRIBUTES COLON pointAtt METHODS COLON pointScopeClass fxDef pointScopeClass2 CBRACKET classDef
    (84) pointClass -> .

    ID              reduce using rule 84 (pointClass -> .)

    pointClass                     shift and go to state 17

state 8

    (78) classDef -> epsilon .

    VOID            reduce using rule 78 (classDef -> epsilon .)
    INT             reduce using rule 78 (classDef -> epsilon .)
    STRING          reduce using rule 78 (classDef -> epsilon .)
    DEC             reduce using rule 78 (classDef -> epsilon .)
    BOOL            reduce using rule 78 (classDef -> epsilon .)
    MAIN            reduce using rule 78 (classDef -> epsilon .)


state 9

    (1) begin -> BEGIN OPAREN ID CPAREN classDef fxDef . main end
    (3) main -> . MAIN pointMain OPAREN CPAREN OBRACKET body CBRACKET

    MAIN            shift and go to state 19

    main                           shift and go to state 18

state 10

    (4) fxDef -> VOID . FX pointFx ID pointFxId OPAREN param CPAREN OBRACKET body CBRACKET fxDef

    FX              shift and go to state 20


state 11

    (5) fxDef -> fxType . FX pointFx ID pointFxId OPAREN param CPAREN OBRACKET body RETURN ID EOF CBRACKET fxDef

    FX              shift and go to state 21


state 12

    (6) fxDef -> epsilon .

    MAIN            reduce using rule 6 (fxDef -> epsilon .)
    CBRACKET        reduce using rule 6 (fxDef -> epsilon .)


state 13

    (7) fxType -> INT .

    FX              reduce using rule 7 (fxType -> INT .)


state 14

    (8) fxType -> STRING .

    FX              reduce using rule 8 (fxType -> STRING .)


state 15

    (9) fxType -> DEC .

    FX              reduce using rule 9 (fxType -> DEC .)


state 16

    (10) fxType -> BOOL .

    FX              reduce using rule 10 (fxType -> BOOL .)


state 17

    (77) classDef -> CLASS pointClass . ID pointClassName OBRACKET ATTRIBUTES COLON pointAtt METHODS COLON pointScopeClass fxDef pointScopeClass2 CBRACKET classDef

    ID              shift and go to state 22


state 18

    (1) begin -> BEGIN OPAREN ID CPAREN classDef fxDef main . end
    (102) end -> . END OPAREN ID CPAREN

    END             shift and go to state 24

    end                            shift and go to state 23

state 19

    (3) main -> MAIN . pointMain OPAREN CPAREN OBRACKET body CBRACKET
    (2) pointMain -> .

    OPAREN          reduce using rule 2 (pointMain -> .)

    pointMain                      shift and go to state 25

state 20

    (4) fxDef -> VOID FX . pointFx ID pointFxId OPAREN param CPAREN OBRACKET body CBRACKET fxDef
    (11) pointFx -> .

    ID              reduce using rule 11 (pointFx -> .)

    pointFx                        shift and go to state 26

state 21

    (5) fxDef -> fxType FX . pointFx ID pointFxId OPAREN param CPAREN OBRACKET body RETURN ID EOF CBRACKET fxDef
    (11) pointFx -> .

    ID              reduce using rule 11 (pointFx -> .)

    pointFx                        shift and go to state 27

state 22

    (77) classDef -> CLASS pointClass ID . pointClassName OBRACKET ATTRIBUTES COLON pointAtt METHODS COLON pointScopeClass fxDef pointScopeClass2 CBRACKET classDef
    (83) pointClassName -> .

    OBRACKET        reduce using rule 83 (pointClassName -> .)

    pointClassName                 shift and go to state 28

state 23

    (1) begin -> BEGIN OPAREN ID CPAREN classDef fxDef main end .

    $end            reduce using rule 1 (begin -> BEGIN OPAREN ID CPAREN classDef fxDef main end .)


state 24

    (102) end -> END . OPAREN ID CPAREN

    OPAREN          shift and go to state 29


state 25

    (3) main -> MAIN pointMain . OPAREN CPAREN OBRACKET body CBRACKET

    OPAREN          shift and go to state 30


state 26

    (4) fxDef -> VOID FX pointFx . ID pointFxId OPAREN param CPAREN OBRACKET body CBRACKET fxDef

    ID              shift and go to state 31


state 27

    (5) fxDef -> fxType FX pointFx . ID pointFxId OPAREN param CPAREN OBRACKET body RETURN ID EOF CBRACKET fxDef

    ID              shift and go to state 32


state 28

    (77) classDef -> CLASS pointClass ID pointClassName . OBRACKET ATTRIBUTES COLON pointAtt METHODS COLON pointScopeClass fxDef pointScopeClass2 CBRACKET classDef

    OBRACKET        shift and go to state 33


state 29

    (102) end -> END OPAREN . ID CPAREN

    ID              shift and go to state 34


state 30

    (3) main -> MAIN pointMain OPAREN . CPAREN OBRACKET body CBRACKET

    CPAREN          shift and go to state 35


state 31

    (4) fxDef -> VOID FX pointFx ID . pointFxId OPAREN param CPAREN OBRACKET body CBRACKET fxDef
    (12) pointFxId -> .

    OPAREN          reduce using rule 12 (pointFxId -> .)

    pointFxId                      shift and go to state 36

state 32

    (5) fxDef -> fxType FX pointFx ID . pointFxId OPAREN param CPAREN OBRACKET body RETURN ID EOF CBRACKET fxDef
    (12) pointFxId -> .

    OPAREN          reduce using rule 12 (pointFxId -> .)

    pointFxId                      shift and go to state 37

state 33

    (77) classDef -> CLASS pointClass ID pointClassName OBRACKET . ATTRIBUTES COLON pointAtt METHODS COLON pointScopeClass fxDef pointScopeClass2 CBRACKET classDef

    ATTRIBUTES      shift and go to state 38


state 34

    (102) end -> END OPAREN ID . CPAREN

    CPAREN          shift and go to state 39


state 35

    (3) main -> MAIN pointMain OPAREN CPAREN . OBRACKET body CBRACKET

    OBRACKET        shift and go to state 40


state 36

    (4) fxDef -> VOID FX pointFx ID pointFxId . OPAREN param CPAREN OBRACKET body CBRACKET fxDef

    OPAREN          shift and go to state 41


state 37

    (5) fxDef -> fxType FX pointFx ID pointFxId . OPAREN param CPAREN OBRACKET body RETURN ID EOF CBRACKET fxDef

    OPAREN          shift and go to state 42


state 38

    (77) classDef -> CLASS pointClass ID pointClassName OBRACKET ATTRIBUTES . COLON pointAtt METHODS COLON pointScopeClass fxDef pointScopeClass2 CBRACKET classDef

    COLON           shift and go to state 43


state 39

    (102) end -> END OPAREN ID CPAREN .

    $end            reduce using rule 102 (end -> END OPAREN ID CPAREN .)


state 40

    (3) main -> MAIN pointMain OPAREN CPAREN OBRACKET . body CBRACKET
    (25) body -> . varsDef body
    (26) body -> . statements body
    (27) body -> . epsilon
    (35) varsDef -> . VAR objType var EOF
    (36) varsDef -> . VAR varSimpleType var EOF
    (28) statements -> . assignmentDef
    (29) statements -> . input
    (30) statements -> . output
    (31) statements -> . voidCall
    (32) statements -> . whileCycle
    (33) statements -> . ifCond
    (34) statements -> . classCall
    (103) epsilon -> .
    (48) assignmentDef -> . ID ASSIGNMENT pointPushAssignment expAssignment
    (100) input -> . INPUT OPAREN ID CPAREN EOF
    (101) output -> . OUTPUT OPAREN expRelational CPAREN EOF
    (24) voidCall -> . ID OPAREN paramCall CPAREN EOF
    (94) whileCycle -> . WHILE OPAREN expRelational CPAREN OBRACKET body CBRACKET
    (95) ifCond -> . IF OPAREN expRelational CPAREN pointIfCond1 OBRACKET body CBRACKET pointIfCond2
    (96) ifCond -> . IF OPAREN expRelational CPAREN pointIfCond1 OBRACKET body CBRACKET ELSE pointIfCond3 OBRACKET body CBRACKET pointIfCond2
    (85) classCall -> . ID MONEY ID OPAREN paramCall CPAREN EOF

    VAR             shift and go to state 48
    CBRACKET        reduce using rule 103 (epsilon -> .)
    ID              shift and go to state 56
    INPUT           shift and go to state 57
    OUTPUT          shift and go to state 58
    WHILE           shift and go to state 59
    IF              shift and go to state 60

    body                           shift and go to state 44
    varsDef                        shift and go to state 45
    statements                     shift and go to state 46
    epsilon                        shift and go to state 47
    assignmentDef                  shift and go to state 49
    input                          shift and go to state 50
    output                         shift and go to state 51
    voidCall                       shift and go to state 52
    whileCycle                     shift and go to state 53
    ifCond                         shift and go to state 54
    classCall                      shift and go to state 55

state 41

    (4) fxDef -> VOID FX pointFx ID pointFxId OPAREN . param CPAREN OBRACKET body CBRACKET fxDef
    (13) param -> . paramType ID pointParam
    (14) param -> . paramType ID pointParam COMMA param
    (15) param -> . epsilon
    (16) paramType -> . INT
    (17) paramType -> . STRING
    (18) paramType -> . DEC
    (19) paramType -> . BOOL
    (103) epsilon -> .

    INT             shift and go to state 64
    STRING          shift and go to state 65
    DEC             shift and go to state 66
    BOOL            shift and go to state 67
    CPAREN          reduce using rule 103 (epsilon -> .)

    param                          shift and go to state 61
    paramType                      shift and go to state 62
    epsilon                        shift and go to state 63

state 42

    (5) fxDef -> fxType FX pointFx ID pointFxId OPAREN . param CPAREN OBRACKET body RETURN ID EOF CBRACKET fxDef
    (13) param -> . paramType ID pointParam
    (14) param -> . paramType ID pointParam COMMA param
    (15) param -> . epsilon
    (16) paramType -> . INT
    (17) paramType -> . STRING
    (18) paramType -> . DEC
    (19) paramType -> . BOOL
    (103) epsilon -> .

    INT             shift and go to state 64
    STRING          shift and go to state 65
    DEC             shift and go to state 66
    BOOL            shift and go to state 67
    CPAREN          reduce using rule 103 (epsilon -> .)

    param                          shift and go to state 68
    paramType                      shift and go to state 62
    epsilon                        shift and go to state 63

state 43

    (77) classDef -> CLASS pointClass ID pointClassName OBRACKET ATTRIBUTES COLON . pointAtt METHODS COLON pointScopeClass fxDef pointScopeClass2 CBRACKET classDef
    (79) pointAtt -> . varsDef
    (80) pointAtt -> . varsDef pointAtt
    (35) varsDef -> . VAR objType var EOF
    (36) varsDef -> . VAR varSimpleType var EOF

    VAR             shift and go to state 48

    pointAtt                       shift and go to state 69
    varsDef                        shift and go to state 70

state 44

    (3) main -> MAIN pointMain OPAREN CPAREN OBRACKET body . CBRACKET

    CBRACKET        shift and go to state 71


state 45

    (25) body -> varsDef . body
    (25) body -> . varsDef body
    (26) body -> . statements body
    (27) body -> . epsilon
    (35) varsDef -> . VAR objType var EOF
    (36) varsDef -> . VAR varSimpleType var EOF
    (28) statements -> . assignmentDef
    (29) statements -> . input
    (30) statements -> . output
    (31) statements -> . voidCall
    (32) statements -> . whileCycle
    (33) statements -> . ifCond
    (34) statements -> . classCall
    (103) epsilon -> .
    (48) assignmentDef -> . ID ASSIGNMENT pointPushAssignment expAssignment
    (100) input -> . INPUT OPAREN ID CPAREN EOF
    (101) output -> . OUTPUT OPAREN expRelational CPAREN EOF
    (24) voidCall -> . ID OPAREN paramCall CPAREN EOF
    (94) whileCycle -> . WHILE OPAREN expRelational CPAREN OBRACKET body CBRACKET
    (95) ifCond -> . IF OPAREN expRelational CPAREN pointIfCond1 OBRACKET body CBRACKET pointIfCond2
    (96) ifCond -> . IF OPAREN expRelational CPAREN pointIfCond1 OBRACKET body CBRACKET ELSE pointIfCond3 OBRACKET body CBRACKET pointIfCond2
    (85) classCall -> . ID MONEY ID OPAREN paramCall CPAREN EOF

    VAR             shift and go to state 48
    CBRACKET        reduce using rule 103 (epsilon -> .)
    RETURN          reduce using rule 103 (epsilon -> .)
    ID              shift and go to state 56
    INPUT           shift and go to state 57
    OUTPUT          shift and go to state 58
    WHILE           shift and go to state 59
    IF              shift and go to state 60

    varsDef                        shift and go to state 45
    body                           shift and go to state 72
    statements                     shift and go to state 46
    epsilon                        shift and go to state 47
    assignmentDef                  shift and go to state 49
    input                          shift and go to state 50
    output                         shift and go to state 51
    voidCall                       shift and go to state 52
    whileCycle                     shift and go to state 53
    ifCond                         shift and go to state 54
    classCall                      shift and go to state 55

state 46

    (26) body -> statements . body
    (25) body -> . varsDef body
    (26) body -> . statements body
    (27) body -> . epsilon
    (35) varsDef -> . VAR objType var EOF
    (36) varsDef -> . VAR varSimpleType var EOF
    (28) statements -> . assignmentDef
    (29) statements -> . input
    (30) statements -> . output
    (31) statements -> . voidCall
    (32) statements -> . whileCycle
    (33) statements -> . ifCond
    (34) statements -> . classCall
    (103) epsilon -> .
    (48) assignmentDef -> . ID ASSIGNMENT pointPushAssignment expAssignment
    (100) input -> . INPUT OPAREN ID CPAREN EOF
    (101) output -> . OUTPUT OPAREN expRelational CPAREN EOF
    (24) voidCall -> . ID OPAREN paramCall CPAREN EOF
    (94) whileCycle -> . WHILE OPAREN expRelational CPAREN OBRACKET body CBRACKET
    (95) ifCond -> . IF OPAREN expRelational CPAREN pointIfCond1 OBRACKET body CBRACKET pointIfCond2
    (96) ifCond -> . IF OPAREN expRelational CPAREN pointIfCond1 OBRACKET body CBRACKET ELSE pointIfCond3 OBRACKET body CBRACKET pointIfCond2
    (85) classCall -> . ID MONEY ID OPAREN paramCall CPAREN EOF

    VAR             shift and go to state 48
    CBRACKET        reduce using rule 103 (epsilon -> .)
    RETURN          reduce using rule 103 (epsilon -> .)
    ID              shift and go to state 56
    INPUT           shift and go to state 57
    OUTPUT          shift and go to state 58
    WHILE           shift and go to state 59
    IF              shift and go to state 60

    statements                     shift and go to state 46
    body                           shift and go to state 73
    varsDef                        shift and go to state 45
    epsilon                        shift and go to state 47
    assignmentDef                  shift and go to state 49
    input                          shift and go to state 50
    output                         shift and go to state 51
    voidCall                       shift and go to state 52
    whileCycle                     shift and go to state 53
    ifCond                         shift and go to state 54
    classCall                      shift and go to state 55

state 47

    (27) body -> epsilon .

    CBRACKET        reduce using rule 27 (body -> epsilon .)
    RETURN          reduce using rule 27 (body -> epsilon .)


state 48

    (35) varsDef -> VAR . objType var EOF
    (36) varsDef -> VAR . varSimpleType var EOF
    (86) objType -> . ID
    (37) varSimpleType -> . INT
    (38) varSimpleType -> . STRING
    (39) varSimpleType -> . DEC
    (40) varSimpleType -> . BOOL

    ID              shift and go to state 76
    INT             shift and go to state 77
    STRING          shift and go to state 78
    DEC             shift and go to state 79
    BOOL            shift and go to state 80

    objType                        shift and go to state 74
    varSimpleType                  shift and go to state 75

state 49

    (28) statements -> assignmentDef .

    VAR             reduce using rule 28 (statements -> assignmentDef .)
    ID              reduce using rule 28 (statements -> assignmentDef .)
    INPUT           reduce using rule 28 (statements -> assignmentDef .)
    OUTPUT          reduce using rule 28 (statements -> assignmentDef .)
    WHILE           reduce using rule 28 (statements -> assignmentDef .)
    IF              reduce using rule 28 (statements -> assignmentDef .)
    CBRACKET        reduce using rule 28 (statements -> assignmentDef .)
    RETURN          reduce using rule 28 (statements -> assignmentDef .)


state 50

    (29) statements -> input .

    VAR             reduce using rule 29 (statements -> input .)
    ID              reduce using rule 29 (statements -> input .)
    INPUT           reduce using rule 29 (statements -> input .)
    OUTPUT          reduce using rule 29 (statements -> input .)
    WHILE           reduce using rule 29 (statements -> input .)
    IF              reduce using rule 29 (statements -> input .)
    CBRACKET        reduce using rule 29 (statements -> input .)
    RETURN          reduce using rule 29 (statements -> input .)


state 51

    (30) statements -> output .

    VAR             reduce using rule 30 (statements -> output .)
    ID              reduce using rule 30 (statements -> output .)
    INPUT           reduce using rule 30 (statements -> output .)
    OUTPUT          reduce using rule 30 (statements -> output .)
    WHILE           reduce using rule 30 (statements -> output .)
    IF              reduce using rule 30 (statements -> output .)
    CBRACKET        reduce using rule 30 (statements -> output .)
    RETURN          reduce using rule 30 (statements -> output .)


state 52

    (31) statements -> voidCall .

    VAR             reduce using rule 31 (statements -> voidCall .)
    ID              reduce using rule 31 (statements -> voidCall .)
    INPUT           reduce using rule 31 (statements -> voidCall .)
    OUTPUT          reduce using rule 31 (statements -> voidCall .)
    WHILE           reduce using rule 31 (statements -> voidCall .)
    IF              reduce using rule 31 (statements -> voidCall .)
    CBRACKET        reduce using rule 31 (statements -> voidCall .)
    RETURN          reduce using rule 31 (statements -> voidCall .)


state 53

    (32) statements -> whileCycle .

    VAR             reduce using rule 32 (statements -> whileCycle .)
    ID              reduce using rule 32 (statements -> whileCycle .)
    INPUT           reduce using rule 32 (statements -> whileCycle .)
    OUTPUT          reduce using rule 32 (statements -> whileCycle .)
    WHILE           reduce using rule 32 (statements -> whileCycle .)
    IF              reduce using rule 32 (statements -> whileCycle .)
    CBRACKET        reduce using rule 32 (statements -> whileCycle .)
    RETURN          reduce using rule 32 (statements -> whileCycle .)


state 54

    (33) statements -> ifCond .

    VAR             reduce using rule 33 (statements -> ifCond .)
    ID              reduce using rule 33 (statements -> ifCond .)
    INPUT           reduce using rule 33 (statements -> ifCond .)
    OUTPUT          reduce using rule 33 (statements -> ifCond .)
    WHILE           reduce using rule 33 (statements -> ifCond .)
    IF              reduce using rule 33 (statements -> ifCond .)
    CBRACKET        reduce using rule 33 (statements -> ifCond .)
    RETURN          reduce using rule 33 (statements -> ifCond .)


state 55

    (34) statements -> classCall .

    VAR             reduce using rule 34 (statements -> classCall .)
    ID              reduce using rule 34 (statements -> classCall .)
    INPUT           reduce using rule 34 (statements -> classCall .)
    OUTPUT          reduce using rule 34 (statements -> classCall .)
    WHILE           reduce using rule 34 (statements -> classCall .)
    IF              reduce using rule 34 (statements -> classCall .)
    CBRACKET        reduce using rule 34 (statements -> classCall .)
    RETURN          reduce using rule 34 (statements -> classCall .)


state 56

    (48) assignmentDef -> ID . ASSIGNMENT pointPushAssignment expAssignment
    (24) voidCall -> ID . OPAREN paramCall CPAREN EOF
    (85) classCall -> ID . MONEY ID OPAREN paramCall CPAREN EOF

    ASSIGNMENT      shift and go to state 81
    OPAREN          shift and go to state 82
    MONEY           shift and go to state 83


state 57

    (100) input -> INPUT . OPAREN ID CPAREN EOF

    OPAREN          shift and go to state 84


state 58

    (101) output -> OUTPUT . OPAREN expRelational CPAREN EOF

    OPAREN          shift and go to state 85


state 59

    (94) whileCycle -> WHILE . OPAREN expRelational CPAREN OBRACKET body CBRACKET

    OPAREN          shift and go to state 86


state 60

    (95) ifCond -> IF . OPAREN expRelational CPAREN pointIfCond1 OBRACKET body CBRACKET pointIfCond2
    (96) ifCond -> IF . OPAREN expRelational CPAREN pointIfCond1 OBRACKET body CBRACKET ELSE pointIfCond3 OBRACKET body CBRACKET pointIfCond2

    OPAREN          shift and go to state 87


state 61

    (4) fxDef -> VOID FX pointFx ID pointFxId OPAREN param . CPAREN OBRACKET body CBRACKET fxDef

    CPAREN          shift and go to state 88


state 62

    (13) param -> paramType . ID pointParam
    (14) param -> paramType . ID pointParam COMMA param

    ID              shift and go to state 89


state 63

    (15) param -> epsilon .

    CPAREN          reduce using rule 15 (param -> epsilon .)


state 64

    (16) paramType -> INT .

    ID              reduce using rule 16 (paramType -> INT .)


state 65

    (17) paramType -> STRING .

    ID              reduce using rule 17 (paramType -> STRING .)


state 66

    (18) paramType -> DEC .

    ID              reduce using rule 18 (paramType -> DEC .)


state 67

    (19) paramType -> BOOL .

    ID              reduce using rule 19 (paramType -> BOOL .)


state 68

    (5) fxDef -> fxType FX pointFx ID pointFxId OPAREN param . CPAREN OBRACKET body RETURN ID EOF CBRACKET fxDef

    CPAREN          shift and go to state 90


state 69

    (77) classDef -> CLASS pointClass ID pointClassName OBRACKET ATTRIBUTES COLON pointAtt . METHODS COLON pointScopeClass fxDef pointScopeClass2 CBRACKET classDef

    METHODS         shift and go to state 91


state 70

    (79) pointAtt -> varsDef .
    (80) pointAtt -> varsDef . pointAtt
    (79) pointAtt -> . varsDef
    (80) pointAtt -> . varsDef pointAtt
    (35) varsDef -> . VAR objType var EOF
    (36) varsDef -> . VAR varSimpleType var EOF

    METHODS         reduce using rule 79 (pointAtt -> varsDef .)
    VAR             shift and go to state 48

    varsDef                        shift and go to state 70
    pointAtt                       shift and go to state 92

state 71

    (3) main -> MAIN pointMain OPAREN CPAREN OBRACKET body CBRACKET .

    END             reduce using rule 3 (main -> MAIN pointMain OPAREN CPAREN OBRACKET body CBRACKET .)


state 72

    (25) body -> varsDef body .

    CBRACKET        reduce using rule 25 (body -> varsDef body .)
    RETURN          reduce using rule 25 (body -> varsDef body .)


state 73

    (26) body -> statements body .

    CBRACKET        reduce using rule 26 (body -> statements body .)
    RETURN          reduce using rule 26 (body -> statements body .)


state 74

    (35) varsDef -> VAR objType . var EOF
    (41) var -> . varsType
    (42) var -> . varsType COMMA var
    (43) varsType -> . ID
    (44) varsType -> . arrDef
    (45) varsType -> . matrixDef
    (46) arrDef -> . ID OSQUAREBR varCte CSQUAREBR
    (47) matrixDef -> . arrDef OSQUAREBR varCte CSQUAREBR

    ID              shift and go to state 95
